# sora2-network

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  BRIDGE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GenerateChainSpec.mk  Jenkinsfile  Jenkinsfile-env  Jenkinsfile-relay  LICENSE  MIGRATIONS.md  Makefile  README.md  RELEASE_NOTES.md  _rust-toolchain.toml  apollo_platform.rs  asset_infos.json  assets-bench.rs  cargoAuditReport.txt  ceres_governance_platform.rs  check  coverage.sh  docker-compose.yml  eth_bridge_assets.json  ethbridgecall  framenode_runtime.compact.compressed.wasm  framenode_runtime.compact.compressed.wasm.preimage.call  framenode_runtime.compact.compressed.wasm.preimage.json  gas_estimations  gas_prices  generate_chain_specs.sh  grcov_start.sh  katex-header.html  nix-env.sh  package.json  pallet_list.txt  pnpm-workspace.yaml  (+13 more)
common/: Cargo.toml
common/src/: alt.rs  balance.rs  balance_unit.rs  constants.rs  eth.rs  fixed.rs  fixed_wrapper.rs  fixed_wrapper_u256.rs  lib.rs  macros.rs  migrations.rs  mock.rs  outcome_fee.rs  permissions.rs  primitives.rs  serialization.rs  storage.rs  swap_amount.rs  test_utils.rs  traits.rs  utils.rs  weights.rs
common/src/arithmetic/: bounds.rs  checked.rs  helpers_256bit.rs  identities.rs  mod.rs  saturating.rs  sp_saturating.rs
common/src/cache_storage/: cache_double_map.rs  cache_map.rs  item.rs  mod.rs
contract-extrinsics/: Cargo.toml
contract-extrinsics/src/: assets.rs  lib.rs  order_book.rs  primitives.rs  utils.rs
contracts/: Cargo.toml
contracts/flipper/: Cargo.toml  lib.rs
contracts/src/: lib.rs  mock.rs  transfer_contract.rs
contracts/transfer-contract/: Cargo.toml  lib.rs
contracts/transfer_contract/: Cargo.toml  lib.rs
misc/sccp-mcp/: .gitignore  Cargo.toml  README.md  config.example.toml
misc/sccp-mcp/scripts/: package-lock.json  package.json  run_sora_dev_integration.sh  smoke_stdio.sh  sora_dev_integration.js
misc/sccp-mcp/src/: config.rs  error.rs  main.rs  mcp.rs  payload.rs  rpc_client.rs  sora_calls.rs  substrate_storage.rs  tools.rs
node/: Cargo.toml  build.rs
node/chain_spec/: Cargo.toml
node/chain_spec/src/: lib.rs
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  data_feed_metrics.rs  eth_bridge_metrics.rs  fork_off.rs  iroha_migration_accounts.in  main.rs  rpc.rs  service.rs
node/src/chain_spec/: mod.rs
pallets/apollo-platform/: Cargo.toml
pallets/apollo-platform/src/: 1.py  benchmarking.rs  lib.rs  migrations.rs  mock.rs  test.rs  tests.rs  weights.rs
pallets/assets/: Cargo.toml
pallets/assets/rpc/: Cargo.toml
pallets/assets/runtime-api/: Cargo.toml
pallets/assets/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  weights.rs
pallets/band/: Cargo.toml
pallets/band/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/bonding-curve-pool/: Cargo.toml
pallets/bonding-curve-pool/src/: lib.rs  mock.rs  tests.rs
pallets/bridge-proxy/: Cargo.toml
pallets/bridge-proxy/rpc/: Cargo.toml
pallets/bridge-proxy/runtime-api/: Cargo.toml
pallets/bridge-proxy/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  test.rs  weights.rs
pallets/ceres-governance-platform/: Cargo.toml
pallets/ceres-governance-platform/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/ceres-launchpad/: Cargo.toml
pallets/ceres-launchpad/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/ceres-liquidity-locker/: Cargo.toml
pallets/ceres-liquidity-locker/benchmarking/: Cargo.toml
pallets/ceres-liquidity-locker/src/: lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/ceres-liquidity-locker/testing/: Cargo.toml
pallets/ceres-presale/: Cargo.toml
pallets/ceres-presale/src/: benchmarking.rs  lib.rs
pallets/ceres-staking/: Cargo.toml
pallets/ceres-staking/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/ceres-token-locker/: Cargo.toml
pallets/ceres-token-locker/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/demeter-farming-platform/: Cargo.toml
pallets/demeter-farming-platform/benchmarking/: Cargo.toml
pallets/demeter-farming-platform/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/denomination/: Cargo.toml
pallets/denomination/src/: lib.rs
pallets/dex-api/: Cargo.toml
pallets/dex-api/benchmarking/: Cargo.toml
pallets/dex-api/rpc/: Cargo.toml
pallets/dex-api/runtime-api/: Cargo.toml
pallets/dex-api/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/dex-manager/: Cargo.toml
pallets/dex-manager/rpc/: Cargo.toml
pallets/dex-manager/runtime-api/: Cargo.toml
pallets/dex-manager/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/eth-bridge/: Cargo.toml
pallets/eth-bridge/rpc/: Cargo.toml
pallets/eth-bridge/runtime-api/: Cargo.toml
pallets/eth-bridge/src/: benchmarking.rs  contract.rs  lib.rs  macros.rs  migration.rs  migrations.rs  mock.rs  offchain.rs  requests.rs  rpc.rs  tests.rs  util.rs  weights.rs
pallets/extended-assets/: Cargo.toml
pallets/extended-assets/src/: benchmarking.rs  lib.rs  mock.rs  (+3 more)
primitives/: Cargo.toml
primitives/core/: Cargo.toml
primitives/ethereum/: Cargo.toml
primitives/src/: lib.rs
primitives/testutils/: Cargo.toml
relayer/: .gitignore  Cargo.toml  ethereum-key  go.mod  go.sum  main.go  update_abi.sh
relayer/cmd/: dump_block.go  fetch_messages.go  root.go  subscribe_beefy.go
relayer/contracts/: generate.go
relayer/ethereum-gen/: Cargo.toml
relayer/parachain-gen/: .gitignore  Cargo.toml  build.rs
relayer/src/: main.rs
relayer/substrate-gen/: .gitignore  Cargo.toml  build.rs
runtime/: Cargo.toml  build.rs
runtime/src/: bags_thresholds.rs  constants.rs  extensions.rs  impls.rs  lib.rs  migrations.rs  mock.rs  on_unbalanced_democracy_slash.rs  sccp_eth_finalized.rs  sccp_eth_zk.rs  xor_fee_impls.rs
substrate-gen/: Cargo.toml  README.md  build.rs
substrate-gen/src/: lib.rs  main.rs
traits/: Cargo.toml
traits/src/: lib.rs
(+20527 files in other folders)
