[patch.crates-io]
# sp-io = { path = "../sora-polkadot-sdk/substrate/primitives/io"}
# The latest versions of thread_local (1.1.2) had a memory leak. This version doesn't have it.
thread_local = { git = "https://github.com/sora-xor/thread_local-rs.git", branch = "patch-1.0.1" }

# TODO: Decide to stay with patch there or change at sdk repository
# patch check only url changes, not rev, so add to url ignored filter
#[patch."https://github.com/w3f/ring-vrf"]
# bandersnatch_vrfs = { git = "https://github.com/w3f/ring-vrf.git", rev = "4125212" }


[workspace]
members = [
    "runtime",
    "common",
    "pallets/apollo-platform",
    "pallets/assets",
    "pallets/ceres-governance-platform",
    "pallets/ceres-liquidity-locker",
    "pallets/demeter-farming-platform",
    "pallets/permissions",
    "pallets/trading-pair",
    "pallets/dex-manager",
    "pallets/dex-api",
    "pallets/farming",
    "pallets/ceres-staking",
    "pallets/ceres-token-locker",
    "pallets/faucet",
    "pallets/hermes-governance-platform",
    "pallets/iroha-migration",
    "pallets/liquidity-proxy",
    "pallets/mock-liquidity-source",
    "pallets/soratopia",
    "pallets/technical",
    "pallets/pool-xyk",
    "pallets/rewards",
    "pallets/xor-fee",
    "pallets/referrals",
    "pallets/eth-bridge",
    "pallets/pswap-distribution",
    "pallets/multicollateral-bonding-curve-pool",
    "pallets/vested-rewards",
    "pallets/xst",
    "pallets/price-tools",
    "pallets/oracle-proxy",
    "pallets/order-book",
    "pallets/bridge-proxy",
    "pallets/bridge-proxy/rpc",
    "pallets/bridge-proxy/runtime-api",
    "pallets/kensetsu",
    "pallets/band",
    "pallets/qa-tools",
    "pallets/extended-assets",
    "node/",
    # "utils/parse",
    # "utils/generate-bags",
    # "utils/remote-ext",
]

resolver = "2"

[workspace.dependencies]
# Other
ed25519-dalek-iroha = { git = "https://github.com/soramitsu/sora2-ed25519-dalek-iroha.git", branch = "develop", default-features = false }
ethabi = { git = "https://github.com/sora-xor/ethabi.git", branch = "sora-v1.6.0", package = "ethabi", default-features = false }
ethabi-derive = { git = "https://github.com/sora-xor/ethabi.git", branch = "sora-v1.6.0", package = "ethabi-derive", default-features = false }
fixnum = { git = "https://github.com/sora-xor/fixnum", branch = "sora-v2.1.0", default-features = false }
jsonrpc-core = { git = "https://github.com/sora-xor/jsonrpc.git", branch = "no-std", package = "jsonrpc-core", default-features = false }

# ORML
currencies = { version = "1.0.0", package = "orml-currencies", default-features = false }
tokens = { version = "1.0.0", package = "orml-tokens", default-features = false }
traits = { version = "1.0.0", package = "orml-traits", default-features = false }
orml-currencies = { version = "1.0.0", default-features = false }
orml-tokens = { version = "1.0.0", default-features = false }
orml-traits = { version = "1.0.0", default-features = false }


# Polkadot SDK
frame-benchmarking = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
frame-election-provider-support = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
frame-executive = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
frame-remote-externalities = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
frame-support = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
frame-system = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
frame-system-benchmarking = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
frame-try-runtime = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
mmr-gadget = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
mmr-rpc = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-aura = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-authorship = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-babe = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-bags-list = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-balances = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-beefy = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-beefy-mmr = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-collective = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-democracy = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-grandpa = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-identity = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-im-online = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-membership = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-mmr = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-multisig = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-offences = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-preimage = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-scheduler = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-session = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-staking = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-sudo = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-timestamp = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-utility = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-basic-authorship = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-chain-spec = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-cli = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-client-api = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-client-db = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-consensus = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-consensus-aura = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-consensus-babe = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-consensus-babe-rpc = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-consensus-beefy = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-consensus-beefy-rpc = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-consensus-epochs = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-consensus-slots = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-executor = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-informant = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-keystore = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-network = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-network-common = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-offchain = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-rpc = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-rpc-api = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-service = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-transaction-pool = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-api = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-arithmetic = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-block-builder = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-blockchain = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-consensus = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-consensus-babe = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-core = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-inherents = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-io = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-keyring = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-keystore = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-mmr-primitives = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-npos-elections = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-offchain = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-rpc = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-runtime = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-session = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-staking = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-statement-store = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-std = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-timestamp = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-tracing = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-transaction-pool = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-transaction-storage-proof = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-trie = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-version = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
substrate-wasm-builder = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
try-runtime-cli = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", package = "pallet-insecure-randomness-collective-flip", default-features = false }
sp-beefy = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", package = "sp-consensus-beefy", default-features = false }
xcm = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", package = "staging-xcm", default-features = false }

# Common
beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
beefy-light-client-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
beefy-light-client-runtime-api = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
bridge-channel = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
bridge-data-signer = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
bridge-types = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
dispatch = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
evm-fungible-app = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
jetton-app = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
leaf-provider = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
leaf-provider-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
leaf-provider-runtime-api = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
multisig-verifier = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
parachain-bridge-app = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
substrate-bridge-app = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
substrate-bridge-channel = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", default-features = false }
bridge-multisig = { git = "https://github.com/sora-xor/sora2-common.git", branch = "polkadotsdk_1.6.0", package = "pallet-multisig", default-features = false }

# Crates.io (Use this in members of workspace for consistency)
ahash = { version = "=0.8.7", default-features = false }
ansi_term = { version = "0.12.1", default-features = false }
anyhow = { version = "1.0.51", default-features = false }
assert_cmd = { version = "=2.0.13", default-features = false }
bstr = { version = "=1.9.1", default-features = false }
bumpalo = { version = "=3.14.0", default-features = false }
cargo-platform = { version = "=0.1.7", default-features = false }
enum-as-inner = { version = "=0.5.1", default-features = false }
env_logger = { version = "0.10.0", default-features = false }
futures = { version = "0.3", default-features = false }
futures-timer = { version = "3.0.2", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
parity-scale-codec-derive = { version = "3", default-features = false }
parking_lot = { version = "0.12.0", default-features = false }
paste = { version = "1.0.0", default-features = false }
predicates = { version = "=3.1.0", default-features = false }
predicates-core = { version = "=1.0.6", default-features = false }
predicates-tree = { version = "=1.0.9", default-features = false }
static_assertions = { version = "1.1.0", default-features = false }
substrate-bip39 = { version = "=0.4.5", default-features = false }
thiserror = { version = "1.0", default-features = false }
substrate-build-script-utils = { version = "3", default-features = false }
schnellru = { version = "=0.2.1", default-features = false }
serde_json = { version = "1.0.61", default-features = false }
smallvec = { version = "1.5.0", default-features = false }
log = { version = "0.4.8", default-features = false }

itertools = { version = "0.10.5", default-features = false }
serde_bytes = { version = "0.11", default-features = false }
parity-util-mem = { version = "0.12.0", default-features = false }
ethereum-types = { version = "0.14.0", default-features = false }
jsonrpsee = { version = "0.16.2", default-features = false }
fallible-iterator = { version = "0.2.0", default-features = false }
num-traits = { version = "0.2.12", default-features = false }
blake2-rfc = { version = "0.2.18", default-features = false }
strum = { version = "0.25.0", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
num-format = { version = "0.4.0", default-features = false }
chrono = { version = "0.4.19", default-features = false }
hex = { version = "0.4.2", default-features = false }
secp256k1 = { version = "0.7", package = "libsecp256k1", default-features = false }
rand = { version = "0.8.5", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
serde = { version = "1.0.101", default-features = false }
tokio = { version = "1.10.1", default-features = false }
async-std = { version = "1.5", default-features = false }
twox-hash = { version = "1.5.0", default-features = false }
once_cell = { version = "1.5.2", default-features = false }
scale-info = { version = "2", default-features = false }
tiny-keccak = { version = "2.0.2", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false }
clap_lex = { version = "=0.5.0", default-features = false }
clap = { version = "=4.5.4", default-features = false }


[profile.release]
panic = 'unwind'
